--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_to_daily_healthy_recipe_app">Welcome to Daily Healthy Recipe App</string>
 
-    <string name="banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
     <string name="app_test_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="banner_test_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="interstitial_test_id">ca-app-pub-3940256099942544/1033173712</string>
+
+    <string name="app_id">ca-app-pub-9466555602486169~6782049121</string>
+    <string name="banner_id">ca-app-pub-9466555602486169/6097321715</string>
+    <string name="interstitial_id">ca-app-pub-9466555602486169/9844995033</string>
 </resources>
