--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="app_id">ca-app-pub-9466555602486169~6782049121</string>
     <string name="banner_id">ca-app-pub-9466555602486169/6097321715</string>
     <string name="interstitial_id">ca-app-pub-9466555602486169/9844995033</string>
+    <string name="unlock_free">Unlock free</string>
 </resources>
